# oi

./: 1  AT_agc014_c.cpp  AT_joi2011yo_e.cpp  AT_joi2011yo_e.cpp_2.cpp  B3614.cpp  CF1492B.cpp  CMakeLists.txt  P1006.cpp  P1048.cpp  P10835.cpp  P10836.cpp  P10837.cpp  P10837_2.cpp  P10839.cpp  P10840.cpp  P10841.cpp  P10996.cpp  P11120.cpp  P11231.cpp  P11232.cpp  P1125.cpp  P1168.cpp  P1203.cpp  P1211.cpp  P1220.cpp  P1220_2.cpp  P1282.cpp  P1379.cpp  P1443.cpp  P1443_2.cpp  P1541.cpp  P1631.cpp  P1714.cpp  P1717.cpp  P1717_1.txt  P1775.cpp  P1886.cpp  P1908.cpp  P2035.cpp  P2208.cpp  (+44 more)
pra_p6044/: pra0.in  pra0.out  pra1.in  pra1.out  pra2.in  pra2.out  pra3.in
