cmake_minimum_required(VERSION 3.0)
project(oi)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_FLAGS -O2)
set(CMAKE_CXX_FLAGS  -O2)

add_executable(oi main.cpp)
add_executable(P1168 P1168.cpp)
add_executable(P1631 P1631.cpp)
add_executable(P2737 P2737.cpp)
add_executable(P1717 P1717.cpp)
add_executable(P6044 P6044.cpp)
add_executable(P4760 P4760.cpp)
add_executable(p1443 P1443.cpp)
add_executable(P1379 P1379.cpp)
add_executable(AT_joi2011yo_e # AT_joi2011yo_e.cpp
        AT_joi2011yo_e.cpp_2.cpp)
add_executable(P1443_2 P1443_2.cpp)
add_executable(AT_agc014_c AT_agc014_c.cpp)
add_executable(oil oil.cpp)
add_executable(P2578 P2578.cpp)
add_executable(P2208 P2208.cpp)
add_executable(P3056 P3056.cpp)
